tests/baselines/reference/tsxStatelessFunctionComponents3(strict=true).errors.txt
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'NewableFunction'.
file.tsx(13,37): error TS7008: Member 'children' implicitly has an 'any' type.


!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
==== file.tsx (1 errors) ====
    import React = require('react');
    
    const Foo = (props: any) => <div/>;
    // Should be OK
    const foo = <Foo />;
    
    
    // Should be OK
    var MainMenu: React.StatelessComponent<{}> = (props) => (<div>
        <h3>Main Menu</h3>
    </div>);
    
    var App: React.StatelessComponent<{ children }> = ({children}) => (
                                        ~~~~~~~~
!!! error TS7008: Member 'children' implicitly has an 'any' type.
        <div >
            <MainMenu/>
    	</div>
    );